--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/register": "^7.10.5",
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "query-string": "^6.13.1",
     "react": "16.10.2",
     "react-dom": "16.10.2",
@@ -21,7 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "ssr": "node server/index.js"
+    "ssr": "node server/index.js",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +35,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "./"
+  "homepage": "https://WilsonLawler.github.com/react-feed"
 }
