--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "query-string": "^6.13.1",
     "react": "16.10.2",
     "react-dom": "16.10.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "styled-components": "4.4.0"
